# Konkon

./: .env.example  .gitignore  .gitmodules  .npmrc  Cargo.toml  LICENSE  README.md  biome.json  bun.lockb  package.json  pnpm-lock.yaml  tsconfig.json  turbo.json
apps/api/: README.md  build.ts  package.json  tsconfig.json
apps/api/src/: index.ts  plugins.ts  routes.ts
apps/api/src/routes/guilds/: index.ts  prefixes.ts  settings.ts
apps/api/src/routes/porter/: index.ts  translate.ts
apps/api/src/schemas/guilds/: prefixes.schema.ts
apps/api/src/schemas/porter/: translate.schema.ts
apps/app/: README.md  package.json  seyfert.config.cjs  tsconfig.json  tsup.config.ts
apps/app/src/: index.ts  types.d.ts
apps/app/src/app/commands/: wave.ts
apps/app/src/app/events/: guildCreate.ts  messageWatcher.ts  onReady.ts
apps/app/src/commands/: eval.ts  ping.ts  wave.ts
apps/app/src/locales/: es.ts
apps/bot/: README.md  package.json  seyfert.config.ts  tsconfig.json
apps/bot/src/: index.ts
apps/bot/src/commands/developer/: akore.ts  eval.ts  parent.ts
apps/bot/src/commands/tags/: parent.ts  tag.add.ts  tag.edit.ts  tag.get.ts  tag.list.ts
apps/bot/src/commands/util/: parent.ts  translate.ts
apps/bot/src/components/tags/: createTag.modal.ts  (+1 more)
apps/bot/src/events/: botReady.ts
apps/bot/src/lib/: README.md  utils.ts
apps/bot/src/locales/: README.md  en.ts  es.ts
apps/bot/src/middlewares/: dev.middleware.ts  guild.middleware.ts  index.ts
src/: main.rs
src/commands/: mod.rs
src/commands/user/: mod.rs  user_info.rs
src/core/utils/: image.rs
(+12 files in other folders)
