[package]
name = "konkon"
version = "0.1.0"
edition = "2021"

[package.metadata.scripts]
run = "cargo watch -c -x run"

[dependencies]
cargo-watch = "8.5.2"
cc = "1.0.99"
clippy = "0.0.302"
dotenv = "0.15.0"
image = "0.25.1"
palette = "0.7.6"
poise = "0.6.1"
rayon = "1.10.0"
reqwest = "0.12.4"
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.40"
